--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Grāmatu vērtēšana</h1>
-    <form>
+    <form action="submit.php" method="post">
       <div>
         <label for="username">Vārds:</label><br />
         <input type="text" id="username" name="username" /><br />
@@ -43,6 +43,9 @@
         <label for="apraksts">Apraksts:</label>
         <br />
         <textarea id="apraksts" name="apraksts"></textarea>
+      </div>
+      <div>
+        <input type="submit" value="Submit" />
       </div>
     </form>
   </body>
