--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       </div>
       <div>
         <input type="submit" value="Submit" />
+        <br />
+        <a href="list">list</a>
       </div>
     </form>
   </body>
