--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <a href="list.php">Skatīt atsauksmes</a>
+    <hr />
     <h1>Grāmatu vērtēšana</h1>
     <form action="submit.php" method="post">
       <div>
@@ -46,8 +48,6 @@
       </div>
       <div>
         <input type="submit" value="Submit" />
-        <br />
-        <a href="list">list</a>
       </div>
     </form>
   </body>
